# Learn-LLM-and-Agent

./: LICENSE  README.md  update-readme
00-开源项目学习/: clone-all.sh  update-all.sh
00-开源项目学习/01-大模型训练基础/: 01-llm-action.md  02-minimind.md  03-self-llm.md
00-开源项目学习/02-RAG实战/: 01-agentic-rag-for-dummies.md  02-production-agentic-rag-course.md  03-rag-from-scratch.md  04-rag-tutorial.md
00-开源项目学习/03-MCP与Skills/: 01-LLMInternSkill.md  02-clawkeeper.md  03-mcp-python-sdk.md  04-mcp-servers.md  05-mcp-typescript-sdk.md
00-开源项目学习/04-Agent实战/: 01-Agent-Learning-Hub.md  02-Deer-flow.md  03-GenAI_Agents.md  04-Hello-agents.md  05-Ragent.md  06-Smolagents.md  07-crewai.md  08-learn-claude-code.md  09-nanobot.md  10-openai-agents-sdk.md  11-ai-agents-from-zero.md
01-预训练与架构基础/01-Transformer与架构演进/: 01-Transformer架构演进.md  02-混合架构与SSM.md
01-预训练与架构基础/02-分布式训练/: 01-训练基础设施与集群.md
01-预训练与架构基础/03-预训练数据与流程/: 01-数据工程与预训练实践.md
02-微调与训练工程/01-微调技术/: 01-全量微调与SFT.md
02-微调与训练工程/02-垂域与专项训练/: 01-垂域模型训练实战.md
02-微调与训练工程/03-训练框架与工具/: 01-开源训练框架实战.md  02-训练数据集资源大全.md
03-对齐与安全/01-对齐技术/: 01-RLHF与PPO实战.md
03-对齐与安全/02-后训练工程/: 01-RLVR与GRPO工程实践.md
06-单Agent开发与框架/02-Agent工具与协议/MCP/github_server/: pyproject.toml
06-单Agent开发与框架/02-Agent工具与协议/MCP/github_server/src/github_mcp_server/: __init__.py  client.py  mcp_instance.py  server.py
06-单Agent开发与框架/02-Agent工具与协议/MCP/github_server/src/github_mcp_server/resources/: __init__.py  repo_info.py
06-单Agent开发与框架/02-Agent工具与协议/MCP/github_server/src/github_mcp_server/tools/: issues.py  pulls.py  repos.py
本仓库构建使用的工具/: update-readme.py
(+111 files in other folders)
