[project]
name = "github-mcp-server"
version = "0.1.0"
description = "GitHub MCP Server - 提供仓库、Issue、PR 管理工具"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
github-mcp = "github_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_mcp_server"]
